[tool.poetry]
name = "agentd"
version = "0.1.0"
description = "A daemon that makes a desktop OS accessible to AI agents"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
mss = "^9.0.1"
pynput = "^1.7.6"
psutil = "^5.9.8"
python-xlib = "^0.33"
pillow = "^10.4.0"
pyscreeze = "^1.0.1"
fastapi = {version = "0.109", extras = ["all"]}
taskara = "0.1.167"
tiktoken = "0.7.0"
celery = "^5.4.0"
celery-types = "^0.22.0"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.5"
flake8 = "^7.0.0"
black = "^24.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"

[tool.pyright]
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = false
reportMissingParameterType = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-docs = "scripts.build_docs:main"
lint = "scripts.lint:main"
